feat: Merge User/Usercredentials into one db table